assets/css/style.scss
/* ... */
p {
  font-family: "IBM Plex Sans", sans-serif;
  color: $grey-dark;
}

.content {
  line-height: 1.4rem;
}

.post {
  margin: 1.5em auto;
  max-width: 55em;
  > div {
    padding: 0 1em 0 1em;
    > p {
      text-align: justify;
    }
  }
}

figure {
  background: white;
  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
  margin: 1em auto;
  max-width: 100%;
  padding: 0.5em 0.5em 0 0.5em;
  width: fit-content;
  a {
    border: 0;
  }
  img {
    max-width: 100%;
  }
}

figcaption {
  color: $black-100;
  font-size: 0.8em;
  font-style: italic;
  text-align: center;
}

#TableOfContents {
  border: 1px dotted hsla(0, 0%, 63%, 0.7);
  margin-bottom: 16px;

  ul {
    list-style-type: none;
    padding-inline-start: 1em;
    margin: 0;
  }
}

h1, h2, h3, h4, h5, h6 {
  font-family: "IBM Plex Sans", sans-serif;
  font-weight: 600;
}

/*=== MEDIA QUERY ===*/
.no-padding {
  padding: 0 !important;
}

.inline-block {
  display: inline-block;
}

ul {
  list-style: circle;
}

ol {
  list-style: decimal;
}

a {
  transition: all .3s ease-in 0s;
}

iframe {
  border: 0;
}

a, a:focus, a:hover {
  text-decoration: none;
  outline: 0;
}

a:focus, a:hover {
  color: $color-1;
}

.btn-main, .btn-main-sm, .btn-transparent {
  background-image: linear-gradient(100deg, $color-2, $color-2);
  color: $white-100;
  display: inline-block;
  font-weight: 500;
  letter-spacing: 1px;
  padding: 10px 40px;
  text-transform: uppercase;
  border: 1px solid transparent;
  border-radius: 2px;
}

.btn-main:hover, .btn-main-sm:hover {
  color: $color-1;
  box-shadow: none;
}

.btn-main-sm {
  padding: 8px 20px;
  font-size: 12px;
}

.btn-transparent:hover {
  color: $color-1;
}

.btn:focus {
  color: $grey-light;
}

.btn.active:focus, .btn:active:focus, .btn:focus {
  outline: 0;
}

#home {
  position: relative;
}

.section {
  padding: 50px 0;
}

@media (max-width: 480px) {
  .section {
    padding: 40px 0;
  }
}

.padding-0 {
  padding: 0;
}

@media (max-width: 768px) {
  .padding-0 {
    padding: 0 15px;
  }
}

.section-sm {
  padding: 70px 0;
}

.section-xs {
  padding: 40px 0;
}

@-webkit-keyframes sk-circleBounceDelay {
  0%, 80%, 100% {
    -webkit-transform: scale(0);
    transform: scale(0);
  }
  40% {
    -webkit-transform: scale(1);
    transform: scale(1);
  }
}

@keyframes sk-circleBounceDelay {
  0%, 80%, 100% {
    -webkit-transform: scale(0);
    transform: scale(0);
  }
  40% {
    -webkit-transform: scale(1);
    transform: scale(1);
  }
}

.title {
  padding-bottom: 50px;
  text-align: center;
}

.title h2 {
  font-size: 35px;
  color: $grey-dark;
  // text-transform: capitalize;
  margin-bottom: 8px;
  font-weight: 700;
}

.title h4 {
  font-size: 10px;
  line-height: 10px;
  font-weight: 700;
  letter-spacing: 3.3px;
  text-transform: uppercase;
}

.title p {
  color: $grey-dark;
  width: 50%;
  margin: 0 auto;
}

@media (max-width: 480px) {
  .title p {
    width: 80%;
  }
}

@media (max-width: 768px) {
  .title p {
    width: 80%;
  }
}

.title .border {
  border: none;
  display: inline-block;
  border-radius: 3px;
  height: 6px;
  position: relative;
  width: 90px;
  margin-bottom: 10px;
}

.bg-gray {
  background: $white-100;
}

.color-gray {
  color: $grey-light;
}

.shadow {
  box-shadow: 0px 0px 30px 0px $black-034;
}

.gradient, .service-2 .service-item i {
  background-image: linear-gradient(100deg, $color-2, $color-2);
}

.title .border {
  background-image: linear-gradient(100deg, $color-2, $color-2);
}

.header-bradcrumb {
  background: transparent;
}

.header-bradcrumb a, .header-bradcrumb .active {
  color: $grey-light;
  font-weight: 200;
  font-family: "IBM Plex Sans", sans-serif;
}

.header-bradcrumb a:hover {
  color: $color-1;
}

.slick-slide {
  outline: none;
}

.commonTab .nav-tabs {
  border: 1px solid transparent;
  text-align: center;
}

.commonTab .nav-tabs .nav-item {
  margin: 0 3px;
}

.commonTab .nav-tabs .nav-item .nav-link {
  background: $white-100;
  color: $grey-light;
  text-transform: capitalize;
  border-radius: 0;
}

.commonTab .nav-tabs .nav-item .nav-link.active {
  border: 1px solid $color-2;
  background: $color-2;
  color: $white-100;
}

.commonTab .nav-tabs .nav-item .nav-link:hover {
  border: 1px solid $color-2;
  border-radius: 0;
  background: $color-2;
  color: $white-100;
}

.commonTab .tab-content {
  padding-top: 30px;
}

.single-page-header {
  background: $color-2;
  padding: 50px 0;
  text-align: center;
  color: $white-100;
  position: relative;
}

.single-page-header .breadcrumb {
  background: transparent;
  display: inline-block;
}

.single-page-header .breadcrumb li {
  display: inline-block;
}

.single-page-header .breadcrumb li a {
  color: $white-100;
}

.navigation {
  transition: .3s all;
  background: $white-100;
}

.select-language a {
  color: $black-100;
  text-transform: uppercase;
  // font-weight: 600;
  margin-left: 15px;
}

.select-language a:hover {
  color: $color-1;
}

.select-language a.selected {
  display: none;
}

.select-language a img {
  position: relative;
  top: -2px;
  left: -3px;
}

.top-bar {
  position: sticky;
  top: 0;
  width: 100%;
  color: $white-100;
  transition: all 0.2s ease-out 0s;
  padding: 0;
  box-shadow: 0 0 20px 0 $black-010;
  z-index: 10;
}

// https://stackoverflow.com/questions/4086107/fixed-page-header-overlaps-in-page-anchors
:target::before {
  content: "";
  display: block;
  height: 82px; /* fixed header height*/
  // margin: -1px 0 0; /* negative fixed header height */
}

.navigation .navbar-nav > li.active .nav-link {
  color: $white-100;
}

.navigation .navbar-nav > li > .nav-link {
  color: $black-100;
  font-size: 15px;
  line-height: 26px;
  padding: 20px 15px !important;
  transition: .2s ease-in-out 0s;
  text-transform: capitalize;
}

@media (max-width: 480px) {
  .navigation .navbar-nav > li > .nav-link {
    padding: 8px 0 !important;
  }
}
/* ... */

